Level 3 array Diff

--- a/Levels/Levels.csproj
+++ b/Levels/Levels.csproj
@@ -39,6 +39,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Level1\DrawStairs\DrawStairHelper.cs" />
+        <Compile Include="Level3\DiffArray\Kata.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
