--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -44,6 +44,7 @@
     <ItemGroup>
         <Compile Include="Helpers\HelperTests.cs" />
         <Compile Include="Level1\DrawStairHelperTests\DrawStairHelperTests.cs" />
+        <Compile Include="Level3\DiffArray\KataTests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
